[package]
name = "vis"
version = "0.0.1"
authors = ["peeqle"]
description = "Set default visibility for struct fields"
keywords = ["visibility", "default", "procmacro","scope"]
edition = "2024"
license = "MIT"
repository = "https://github.com/peeqle/noscope360"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2.0.106"

